Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4568

Milestones where changed from seconds to milliseconds

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.2.0
    • 6.2.0, 7.0.0
    • HTTP
    • None

    Description

      Sleeping for 1 seconds on the origin shows 999 seconds in slow log:

      [Jun 21 10:55:02.763] Server {0x7f33a565b8c0} ERROR: <HttpSM.cc:6966 (update_stats)> [0] Slow Request: client_ip: 127.0.0.1:48486 url: http://127.0.0.1:80/sleep.php?slfkjasdflkajsdfl;kajsdf;lkajsf;alksjdf;alksjdflaksjfl;askjdflaskdfjaksljdfhalskdjfhalsdkhflsdhjfaslfsdfdddddddddddddddddddddddddddddddddddddddddddddasdflkajsdfl;kajsdf;lkajsf;alksjdf;alksjdflaksjfl;askjdflaskdfjaksljdfhalskd status: 200 unique id:  redirection_tries: 0 bytes: 2 fd: 0 client state: 0 server state: 9 ua_begin: 0.000 ua_first_read: 0.000 ua_read_header_done: 0.000 cache_open_read_begin: 0.000 cache_open_read_end: 0.000 dns_lookup_begin: -1.000 dns_lookup_end: -1.000 server_connect: 0.000 server_first_read: 999.000 server_read_header_done: 999.000 server_close: 999.000 ua_close: 999.000 sm_finish: 999.000 plugin_active: -1.000 plugin_total: -1.000
      

      Attachments

        Issue Links

          Activity

            People

              bcall Bryan Call
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: