TS-4568: Milestones where changed from seconds to milliseconds